test/types/cptr/const/extern_var_is_const.good
extern_var_is_const.chpl:9: error: cannot assign to const variable
